--- a/faculty_page.html
+++ b/faculty_page.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<div align="center">
-		<h1 align="center">Hello Shihka Ma'am</h1>
+		<h1 align="center">Hello Shikha Ma'am</h1>
 		</div>
 		<div align="center">
     		<img src="avatar.png" class="media-object" style="width:100px" align="center">
